--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
 		<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
 		<a class="navbar-brand" href="#">
-			<div style="display:inline-block; width: 50px; vertical-align: middle;"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+			<div id="logoicon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
 					<style type="text/css">
 						.st0 {
 							fill: #0000AA;
@@ -76,9 +76,9 @@
 	<!-- jumbotron -->
 	<div class="container p-5">
 		<h1 class="display-3 accent text-uppercase">About Us</h1>
-		<p class="lead">Big Time Protection Inc. (B. T.P) provides security guards for all sites including Commercial Developments, Parking fields, Warehouses & Institutions in New
+		<p class="lead">Big Time Protection Inc. (B.T.P) provides security guards for all sites including Commercial Developments, Parking fields, Warehouses & Institutions in New
 York &amp; New Jersey.</p>
-		<div class="row p-5">
+		<div class="row pt-5">
 			<div class="col-md-4">
 				<h2><i class="fa fa-id-card-o"></i> Our Guards</h2>
 				<p>We are fully insured and our guards are licensed. The Guards patrol in vehicle with flashing lights, driving around perimeter. We'll provide guard booths where applicable.</p>
