--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light bg-white border-bottom">
 		<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
 		<a class="navbar-brand" href="#">
-			<div style="display:inline-block; width: 50px; vertical-align: middle;"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+			<div id="logoicon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
 					<style type="text/css">
 						.st0 {
 							fill: #0000AA;
@@ -85,17 +85,17 @@
 							<input type="text" class="form-control" name="name">
 						</div>
 						<div class="form-group" class=" text-white">
-							<label for="tel">Telephone</label>
+							<label for="tel" class=" text-white">Telephone</label>
 							<input type="tel" class="form-control" name="tel">
 						</div>
 						<div class="form-group" class=" text-white">
-							<label for="eml">Email</label>
+							<label for="eml" class=" text-white">Email</label>
 							<input type="email" class="form-control" name="eml">
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="form-group" class=" text-white">
-							<label for="msg">Message</label>
+							<label for="msg" class=" text-white">Message</label>
 							<textarea class="form-control" name="msg" rows="8"></textarea>
 						</div>
 					</div>
