--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<nav class="navbar navbar-expand-lg navbar-light">
 		<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark"> -->
 		<a class="navbar-brand" href="#">
-			<div style="display:inline-block; width: 50px; vertical-align: middle;"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
+			<div id="logoicon"><svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 50 50" style="enable-background:new 0 0 50 50;" xml:space="preserve">
 					<style type="text/css">
 						.st0 {
 							fill: #0000AA;
@@ -178,7 +178,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="bg-accent h-100 d-flex align-items-center justify-content-center">
-					<div>
+					<div class="p-2">
 					<p>Find out more details about the services we provide.</p>
 					<p><a href="about.html" class="btn btn-primary">About Us</a></p>
 				</div>
