--- a/about.html
+++ b/about.html
@@ -89,7 +89,7 @@ York &amp; New Jersey.</p>
 			</div>
 			<div class="col-md-4">
 				<h2><i class="fa fa-video-camera"></i> Assets</h2>
-				<p>Upon request we use audible &amp; non-audible wireless motion sensors and, video surveillance, strategically placed at various locations to alert intrusion, all at little or no cost to you.</p>
+				<p>Upon request we use audible &amp; non-audible wireless motion sensors and video surveillance, strategically placed at various locations to alert intrusion, all at little or no cost to you.</p>
 			</div>
 		</div>
 	</div>
