--- a/contact.html
+++ b/contact.html
@@ -73,9 +73,9 @@
 	</nav>
 	<!-- jumbotron -->
 	<div class="container p-5">
-		<h1 class="display-3 accent text-uppercase">Contact Us</h1>
-		<p class="lead text-white">Big Time Protection Inc. (B. T.P) provides security guards for all sites including Commercial Developments, Parking fields, Warehouses & Institutions in New
-			York &amp; New Jersey. Drop us a line to find out what we can do for you, or schedule us to begin.</p>
+		<h1 class="display-3 text-white text-uppercase">Contact Us</h1>
+		<p class="lead text-white">Big Time Protection Inc. (B.T.P) provides security guards for all sites including Commercial Developments, Parking fields, Warehouses &amp; Institutions in New
+			York &amp; New Jersey. <br>Drop us a line to find out what we can do for you, or schedule us to begin.</p>
 		<div>
 			<form>
 				<div class="row">
