--- a/index.html
+++ b/index.html
@@ -114,9 +114,9 @@
 	<div class="jumbotron p-5 text-white">
 		<div class="container">
 			<div style="max-width: 600px">
-				<h1 class="display-3 accent text-uppercase">Security Services</h1>
+				<h1 class="display-3 text-uppercase">Security Services</h1>
 				<p>covering New York and New Jersey. We provide Security guards and equipment to protect your property. Customizable to your needs, reliable with your valuables and affordable for your budget, starting at </p>
-				<h4><span class="display-4 accent"><sup>$</sup>20</span> /hr/guard</h4>
+				<h4><span class="display-4"><sup>$</sup>20</span> /hr/guard</h4>
 				<a class="btn btn-primary" href="contact.html">Learn more</a>
 			</div>
 		</div>
@@ -129,7 +129,7 @@
 				<svg version="1.1" id="Layer_2" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 100 100" style="enable-background:new 0 0 100 100;" xml:space="preserve">
 					<style type="text/css">
 						.st1 {
-							fill: #D4AC4C;
+							fill: #b80;
 						}
 					</style>
 					<g>
